add one more collection to meetup db
